--- a/postJourneyMobile/package.json
+++ b/postJourneyMobile/package.json
@@ -10,22 +10,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-  "expo": "~54.0.13",
-  "expo-status-bar": "~3.0.8",
-  "expo-linear-gradient": "~15.0.7",
-
-  "react": "19.1.0",
-  "react-dom": "19.1.0",
-  "react-native": "0.81.5",
-  "react-native-web": "~0.21.0",
-
-  "@react-navigation/native": "^7.1.18",
-  "@react-navigation/native-stack": "7.8.2",
-  "@react-native-picker/picker": "^2.11.1",
-
-  "axios": "^1.12.2",
-  "react-native-safe-area-context": "~5.6.0",
-  "react-native-screens": "~4.16.0"
-}
-
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "7.8.2",
+    "axios": "^1.12.2",
+    "expo": "~54.0.13",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "~0.21.0",
+    "react-native-webview": "13.15.0"
+  }
 }
