--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/postjourney
 JWT_SECRET=mysecretkey
+YOUTUBE_API_KEY=AIzaSyCmaXSuKlyQyZg8vbzq4gOkOb3IEisahD0
