--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "expo": "^54.0.30",
+    "expo-image-manipulator": "~14.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-native-view-shot": "4.0.3",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
