--- a/postJourneyMobile/package.json
+++ b/postJourneyMobile/package.json
@@ -10,11 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.11.1",
+    "@mediapipe/hands": "^0.4.1675469240",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "7.8.2",
+    "@tensorflow-models/handpose": "^0.1.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.12.2",
     "expo": "~54.0.13",
+    "expo-av": "~16.0.8",
+    "expo-camera": "~17.0.10",
+    "expo-file-system": "~19.0.21",
+    "expo-gl": "~16.0.9",
+    "expo-image-manipulator": "~14.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -22,7 +31,9 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
-    "react-native-webview": "^13.15.0"
+    "react-native-webview": "13.15.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
