--- a/postJourneyMobile/package.json
+++ b/postJourneyMobile/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@mediapipe/hands": "^0.4.1675469240",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-community/slider": "^5.1.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "7.8.2",
     "@tensorflow-models/handpose": "^0.1.0",
@@ -21,14 +23,18 @@
     "expo": "~54.0.13",
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
+    "expo-document-picker": "^14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-gl": "~16.0.9",
     "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-fs": "^2.20.0",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-view-shot": "4.0.3",
