Add PostJourney folder

--- a/postJourneyMobile/package.json
+++ b/postJourneyMobile/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native-stack": "7.8.2",
     "@tensorflow-models/handpose": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "expo": "~54.0.13",
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
@@ -27,7 +27,7 @@
     "expo-file-system": "~19.0.21",
     "expo-gl": "~16.0.9",
     "expo-image-manipulator": "~14.0.8",
-    "expo-image-picker": "^17.0.10",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
