--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "axios": "^1.12.2",
     "expo": "^54.0.30",
     "expo-image-manipulator": "~14.0.8",
