--- a/postJourneyMobile/package.json
+++ b/postJourneyMobile/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mediapipe/hands": "^0.4.1675469240",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.6.0",
     "@react-native-community/slider": "^5.1.1",
     "@react-native-picker/picker": "^2.11.1",
@@ -21,8 +21,10 @@
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.13.2",
     "expo": "~54.0.13",
+    "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
+    "expo-crypto": "~15.0.8",
     "expo-document-picker": "^14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-gl": "~16.0.9",
@@ -30,6 +32,7 @@
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
