--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.12.2",
     "expo": "^54.0.30",
     "expo-image-manipulator": "~14.0.8",
